# wi26

./: Makefile  README.md  assignments.md  calendar.md  contact.md  grades.md  index.md  lectures.md  links.md  package.yaml  project.md  site.hs
docs/: assignments.html  calendar.html  contact.html  grades.html  index.html  lectures.html  links.html  project.html
docs/code/src/: hello-old.hs  hello.hi  hello.hs  lec_10_17_23.hs  lec_10_24_23.hs  lec_10_26_23.hs  lec_11_28_23.hs  lec_1_13_26.hs  lec_1_6_26.hs  lec_1_8_26.hs
docs/lectures/: 00-hello.html  01-lambda.html  02-basic.html  02-haskell-basic.html  03-adt.html  03-haskell-types.html  04-haskell-io.html  04-hof.html  05-higher-order.html  05-io.html  06-poly-data.html  06-typeclasses.html  07-bottling-patterns.html  07-functors.html  08-monads.html  09-list.html  09-monads.html  10-list.html  10-state.html  11-parsers.html  11-state.html  12-parsers.html  13-transformers.html  14-testing.html  15-stm.html  16-rust-basics.html
docs/static/code/: cse230-code.cabal  hie.yaml  package.yaml  stack.yaml
lectures/: 00-hello.md  01-lambda.md  02-basic.md  03-adt.md  04-hof.md  05-io.md  06-typeclasses.md  07-functors.md  08-monads.md  13-transformers.md  14-testing.md  16-rust-basics.md  17-rust-borrowing.md  17-rust-ownership.md
sheets/: sheet1b.typ  sheet2a.typ  sheet2b.typ  sheet3a.typ  sheet3b.typ  sheet4a.typ  sheet4b.typ
static/code/: cse230-code.cabal
static/code/src/: hello.hs  lec_10_10_23.hs  lec_10_19_23.hs  lec_10_31_23.hs  lec_11_14_23.hs  lec_11_16_23.hs  lec_11_21_23.hs  lec_11_7_23.hs  lec_1_15_26.hs  lec_1_20_26.hs  lec_1_27_26.hs  lec_1_6_26.hs  lec_1_8_26.hs  stm.lhs
static/rust/rust-230/: Cargo.toml
static/rust/rust-230/src/: main.rs
templates/: nav.html
